--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -40,3 +40,13 @@
     align-items: flex-end;
   }
 }
+
+.footer-link {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: var(--color-text);
+  font-size: 12px;
+  font-weight: lighter;
+  line-height: 125%;
+}
