--- a/src/components/Sliders/Physis/MySwiper.css
+++ b/src/components/Sliders/Physis/MySwiper.css
@@ -9,8 +9,9 @@
   box-sizing: border-box;
   overflow: hidden;
   width: 100%;
+  max-width: 1200px;
 
-  height: 75vh;
+  height: 100%;
 
   padding: 0px 0px;
 }
@@ -47,4 +48,8 @@
   top: 0;
   width: 100%;
   height: 100%;
+}
+.swiper-horizontal > .swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
+  bottom: var(--swiper-scrollbar-bottom, 10px) !important;
 }
