--- a/src/pages/singleProject/ProjectPage.css
+++ b/src/pages/singleProject/ProjectPage.css
@@ -142,3 +142,18 @@
 .sub-col .nav-link {
   padding: 0.75em 1.25em;
 }
+
+@media only screen and (max-width: 768px) {
+  .project-hero-img,
+  .project-hero-img-2 {
+    height: 50vh;
+  }
+
+  .project-copy {
+    padding-top: 4em;
+    padding-bottom: 4em;
+  }
+  .container {
+    padding: 0;
+  }
+}
